# ImmediateEarthApp

./: .gitignore  components.d.ts  package.json  pnpm-lock.yaml  prd.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capability.json
src-tauri/src/: lib.rs
src/components/: SatelliteImageViewer.vue
src/services/: dateUtils.ts
